bugfix: 会员秘籍页container visible修复及等级曲线图焦点图标visible处理

--- a/membership/memberGrowth/sourcecode/css/index.css
+++ b/membership/memberGrowth/sourcecode/css/index.css
@@ -123,31 +123,26 @@ body {
 .container {
 	position: absolute;
 	top: 173px;
-	left: 89px;
-	width: 1742px;
+	width: 100%;
 	height: 1900px;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 .innerContainer {
 	position: relative;
 	top: 0px;
-	left: 0px;
-	width: 100%;
+	left: 89px;
+	width: 1742px;
 	height: 1900px;
-	/*overflow: hidden;*/
+	overflow: visible;
 }
 
 /*成长曲线div*/
 .curveDivClass {
 	position: relative;
-	width:1742px;
+	width:100%;
 	height: 448px;
 } 
-
-.curveDivClass *{
-   overflow: visible;
-}
 
 #gotCoinsPath {
 	stroke:none;
